fixed toolbar spacing when hidden

--- a/app/components/toolbar/toolbar.module.css
+++ b/app/components/toolbar/toolbar.module.css
@@ -24,7 +24,7 @@
 }
 
 .hidden {
-  height: calc(40px + (var(--spaceS) * 2));
+  height: calc(40px + (var(--spaceM) * 2));
   opacity: 0.3;
 }
 
